# shoot-tauri

./: .gitignore  .gitmodules  package-lock.json  package.json  shoot-tauri.code-workspace
.github/workflows/: deploy.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
